--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- Scripts -->
     <script src="js/main.js"></script>
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWzbHsMCz2SIim1JugMAbbdEdIU_oXajM&callback=app.initMap"
+        src="https://maps.googleapis.com/maps/api/js?key=[API KEY]=app.initMap"
         async defer></script>
     <script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=app.getIP"></script>
 
