--- a/admin.html
+++ b/admin.html
@@ -18,7 +18,7 @@
     <script>
         // Initialize Firebase
         var config = {
-            apiKey: "AIzaSyCclwHiZUCm9IhXiPE8VzweeM5NRubgspc",
+            apiKey: "${{ secrets.FIREBASE_API_KEY }}",
             authDomain: "project2-1f1b6.firebaseapp.com",
             databaseURL: "https://project2-1f1b6.firebaseio.com",
             projectId: "project2-1f1b6",
